TSSYSTEM #4 Registration page
fixed bugs
changed the structure of the files
fixed file formatting

--- a/src/app/registration/parent-form/dialogs/add-existing-student/dialog-add-existing-student.html
+++ b/src/app/registration/parent-form/dialogs/add-existing-student/dialog-add-existing-student.html
@@ -8,11 +8,7 @@
         placeholder="Ex. email@email.com"
         formControlName="email"
       />
-      <mat-error
-        *ngIf="
-        checkControlErrors('email')
-    "
-      >
+      <mat-error *ngIf="checkControlErrors('email')">
         Incorrect email or student doesn't exist
       </mat-error>
     </mat-form-field>
