--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -6,29 +6,29 @@
       </button>
     </div>
     <div>
-      <button mat-flat-button routerLink="/">
+      <button mat-flat-button routerLink="/" (click)="hideMenu()">
         <h1>My App</h1>
       </button>
     </div>
     <div>
-      <button mat-icon-button routerLink="/contacts">
+      <button mat-icon-button routerLink="/contacts" (click)="hideMenu()">
         <mat-icon>contact_page</mat-icon>
       </button>
     </div>
   </mat-toolbar>
-
   <div>
     <mat-toolbar class="menu-list" [class.show-menu-list]="isMenuShown">
       <div class="menu-element">
-        <button mat-flat-button>
+        <button mat-flat-button (click)="hideMenu()">
           <span>Page 1</span>
         </button>
       </div>
       <div class="menu-element">
-        <button mat-flat-button>
+        <button mat-flat-button (click)="hideMenu()">
           <span>Page 2</span>
         </button>
       </div>
     </mat-toolbar>
   </div>
+  <div *ngIf="isMenuShown" class="block-page" (click)="hideMenu()"></div>
 </div>
