--- a/src/app/registration/student-form/student-form.component.html
+++ b/src/app/registration/student-form/student-form.component.html
@@ -15,8 +15,8 @@
               <mat-label>Name</mat-label>
               <input matInput placeholder="First name" formControlName="name" />
               <mat-error *ngIf="checkControlErrors('name')">
-                Enter your name</mat-error
-              >
+                Enter your name
+              </mat-error>
             </mat-form-field>
             <div>
               <button mat-button matStepperNext type="button">Next</button>
@@ -37,8 +37,8 @@
                 formControlName="lastName"
               />
               <mat-error *ngIf="checkControlErrors('lastName')">
-                Enter your last name</mat-error
-              >
+                Enter your last name
+              </mat-error>
             </mat-form-field>
             <div>
               <button mat-button matStepperPrevious type="button">Back</button>
@@ -83,8 +83,8 @@
                 formControlName="phoneNumber"
               />
               <mat-error *ngIf="checkControlErrors('phoneNumber')">
-                Incorrect phone number</mat-error
-              >
+                Incorrect phone number
+              </mat-error>
             </mat-form-field>
             <div>
               <button mat-button matStepperPrevious type="button">Back</button>
@@ -108,8 +108,8 @@
                   formControlName="password"
                 />
                 <mat-error *ngIf="checkControlErrors('password')">
-                  Incorrect password</mat-error
-                >
+                  Incorrect password
+                </mat-error>
               </mat-form-field>
               <button
                 mat-icon-button
@@ -135,8 +135,8 @@
                   formControlName="confirmPassword"
                 />
                 <mat-error *ngIf="checkControlErrors('confirmPassword')">
-                  Password mismatch</mat-error
-                >
+                  Password mismatch
+                </mat-error>
               </mat-form-field>
               <button
                 mat-icon-button
