--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,18 @@
 .page {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.block-page {
-    background-color:#000000; 
-    position:fixed; 
-    left: 0;
-    overflow: hidden;
-    height:100%; 
-    width:100vw; 
-    z-index:99;
-    opacity: 0.7;
-}
-
-.top-bar{
-    flex-shrink: 0;
+  height: 100vh;
 }
 
 .container {
-    flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 94.2vh;
+  overflow-y: scroll;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 .footer {
-    flex-shrink: 0
+  flex-shrink: 0;
 }
