--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -4,6 +4,8 @@
 }
 
 .top-bar {
+  position: relative;
+  z-index: 1001;
   background-color: white;
   justify-content: space-between;
   border-bottom: 1px solid rgba(25, 25, 25, 0.1);
@@ -15,7 +17,7 @@
 
 .menu-list {
   position: absolute;
-  z-index: 101;
+  z-index: 1001;
   height: 0px;
   overflow: hidden;
   transition: height 0.4s;
@@ -27,4 +29,15 @@
 
 .show-menu-list {
   height: 175px;
+}
+
+.block-page {
+  position: absolute;
+  background-color: #000000;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 1000;
+  opacity: 0.7;
 }
