--- a/src/app/registration/student-form/dialogs/add-parent/dialog-add-parent.html
+++ b/src/app/registration/student-form/dialogs/add-parent/dialog-add-parent.html
@@ -3,14 +3,13 @@
     <p>Enter parent's email</p>
     <mat-form-field appearance="fill">
       <mat-label>Parent's email</mat-label>
-      <input matInput formControlName="email" />
-      <mat-error
-        *ngIf="
-        parentForm.controls['email'].invalid &&
-        parentForm.controls['email'].touched
-  "
-      >
-        Incorrect email. Ex.: email@email.com
+      <input
+        matInput
+        placeholder="Ex. email@email.com"
+        formControlName="email"
+      />
+      <mat-error *ngIf="checkControlErrors('email')">
+        Incorrect email or parent doesn't exist
       </mat-error>
     </mat-form-field>
   </div>
