TSSYSTEM #5 Login page
fixed bugs
changed the structure of the files

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -19,7 +19,12 @@
       >
         <mat-icon>login</mat-icon>
       </button>
-      <button mat-icon-button *ngIf="isLoggedIn" (click)="logOut(); hideMenu()">
+      <button
+        mat-icon-button
+        *ngIf="isLoggedIn"
+        (click)="logOut(); hideMenu()"
+        routerLink="/login"
+      >
         <mat-icon>logout</mat-icon>
       </button>
       <button mat-icon-button routerLink="/contacts" (click)="hideMenu()">
