--- a/src/app/login/dialogs/dialog-set-password.html
+++ b/src/app/login/dialogs/dialog-set-password.html
@@ -12,8 +12,8 @@
           formControlName="password"
         />
         <mat-error *ngIf="checkControlErrors('password')">
-          Incorrect password</mat-error
-        >
+          Incorrect password
+        </mat-error>
         <button
           mat-icon-button
           matSuffix
@@ -22,9 +22,9 @@
           [attr.aria-label]="'Hide password'"
           [attr.aria-pressed]="hidePassword"
         >
-          <mat-icon
-            >{{ hidePassword ? "visibility_off" : "visibility" }}</mat-icon
-          >
+          <mat-icon>
+            {{ hidePassword ? "visibility_off" : "visibility" }}
+          </mat-icon>
         </button>
       </mat-form-field>
     </div>
@@ -39,8 +39,8 @@
           formControlName="confirmPassword"
         />
         <mat-error *ngIf="checkControlErrors('confirmPassword')">
-          Password mismatch</mat-error
-        >
+          Password mismatch
+        </mat-error>
         <button
           mat-icon-button
           matSuffix
@@ -49,10 +49,9 @@
           [attr.aria-label]="'Hide password'"
           [attr.aria-pressed]="hideConfirmPassword"
         >
-          <mat-icon
-            >{{ hideConfirmPassword ? "visibility_off" : "visibility"
-            }}</mat-icon
-          >
+          <mat-icon>
+            {{ hideConfirmPassword ? "visibility_off" : "visibility" }}
+          </mat-icon>
         </button>
       </mat-form-field>
     </div>
