--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,16 +9,16 @@
           <span>Is <b>Caps Lock</b> on?</span>
         </li>
         <li>
-          <span
-            >Maybe you don't have a <b>password</b>? Try to switch slide toggle
-            to the left.</span
-          >
+          <span>
+            Maybe you don't have a <b>password</b>? Try to switch slide toggle
+            to the left.
+          </span>
         </li>
         <li>
-          <span
-            >Try typing your password in a text editor and then
-            <b>copying and pasting</b> it into the "Password" field.</span
-          >
+          <span>
+            Try typing your password in a text editor and then
+            <b>copying and pasting</b> it into the "Password" field.
+          </span>
         </li>
       </ul>
     </div>
