--- a/src/app/registration/parent-form/parent-form.component.html
+++ b/src/app/registration/parent-form/parent-form.component.html
@@ -251,6 +251,7 @@
                 mat-button
                 [disabled]="parentForm.invalid"
                 (click)="signUp()"
+                routerLink="/login"
               >
                 Sign Up
               </button>
