--- a/src/app/registration/student-form/student-form.component.html
+++ b/src/app/registration/student-form/student-form.component.html
@@ -220,6 +220,7 @@
                 mat-button
                 [disabled]="studentForm.invalid"
                 (click)="signUp()"
+                routerLink="/login"
               >
                 Sign Up
               </button>
