TSSYSTEM #6 Alphabet page
added Alphabet page
added styles for Alphabet page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
     <app-top-bar></app-top-bar>
   </div>
   <div class="container">
-    <div class="content"><router-outlet></router-outlet></div>
-    <div class="footer">
-      <app-footer></app-footer>
+    <div class="media">
+      <div class="content"><router-outlet></router-outlet></div>
+      <div class="footer">
+        <app-footer></app-footer>
+      </div>
     </div>
   </div>
 </div>
