--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
       <p>Try our App</p>
     </div>
     <div class="card-container">
-      <div class="card project-1-card" routerLink="/indeveloping">
+      <div class="card project-1-card" routerLink="/alphabet">
         <h1>Alphabet</h1>
         <p>In developing</p>
       </div>
