--- a/src/app/login/dialogs/dialog-set-password.html
+++ b/src/app/login/dialogs/dialog-set-password.html
@@ -19,7 +19,7 @@
           matSuffix
           type="button"
           (click)="hidePassword = !hidePassword"
-          [attr.aria-label]="'Hide password'"
+          aria-label="Hide password"
           [attr.aria-pressed]="hidePassword"
         >
           <mat-icon>
@@ -46,7 +46,7 @@
           matSuffix
           type="button"
           (click)="hideConfirmPassword = !hideConfirmPassword"
-          [attr.aria-label]="'Hide password'"
+          aria-label="Hide password"
           [attr.aria-pressed]="hideConfirmPassword"
         >
           <mat-icon>
@@ -57,7 +57,7 @@
     </div>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button (click)="cancel()">Cancel</button>
     <button
       mat-button
       [disabled]="setPasswordForm.invalid"
