--- a/src/app/registration/parent-form/dialogs/add-new-student/dialog-add-new-student.html
+++ b/src/app/registration/parent-form/dialogs/add-new-student/dialog-add-new-student.html
@@ -98,7 +98,7 @@
           </h3>
           <div mat-dialog-actions>
             <button mat-button matStepperPrevious type="button">Back</button>
-            <button mat-button (click)="onNoClick()">Cancel</button>
+            <button mat-button (click)="cancel()">Cancel</button>
             <button
               mat-button
               [disabled]="newStudentForm.invalid"
