--- a/src/app/registration/student-form/dialogs/add-parent/dialog-add-parent.html
+++ b/src/app/registration/student-form/dialogs/add-parent/dialog-add-parent.html
@@ -14,7 +14,7 @@
     </mat-form-field>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button (click)="cancel()">Cancel</button>
     <button
       mat-button
       [disabled]="parentForm.invalid"
