--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,7 @@
+$tooltipHeight: 284px;
+$tooltipWidth: 258px;
+$iconSize: 24px;
+
 :host {
   display: flex;
   justify-content: center;
@@ -22,20 +26,6 @@
   }
 }
 
-.error-mesage {
-  max-height: 0px;
-  overflow: hidden;
-  background-color: #faebeb;
-  border-radius: 4px;
-  transition: max-height 0.8s;
-}
-
-.show-error-message {
-  max-height: 284px;
-  margin: 0px 0px 30px;
-  padding: 7px 18px 9px;
-}
-
 .form-container {
   display: flex;
   flex-direction: column;
@@ -51,4 +41,14 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
+}
+
+.help {
+  cursor: help;
+  height: $iconSize;
+  margin-bottom: 12px;
+}
+
+.tooltip-template {
+  display: none;
 }
