--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -4,7 +4,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Select your status</mat-label>
         <mat-select [(ngModel)]="formVariant">
-          <mat-option *ngFor="let status of statuses" [value]="status">
+          <mat-option *ngFor="let status of STATUSES" [value]="status">
             {{ status }}</mat-option
           >
         </mat-select>
