TSSYSTEM #7 Letter page
added letter page
added sounds for letters
added audio player
added adaptive for letter page

--- a/src/app/alphabet/alphabet.component.html
+++ b/src/app/alphabet/alphabet.component.html
@@ -5,7 +5,7 @@
       class="card-container"
       *ngFor="let letter of alphabet"
       [title]="letter.name + ' details'"
-      [routerLink]="['/letters', letter.id]"
+      [routerLink]="['letter', letter.id]"
     >
       <div class="card">
         <img class="letter-image" [src]="letter.letterImg" />
